# st-clients

Socialtext-RemotelySimple/: Build.PL  Changes  MANIFEST  README
Socialtext-RemotelySimple/script/: socialtexter  st-batch-delete
Socialtext-RemotelySimple/t/: 00-load.t
atom/pyatom/: Makefile  XmlToDictBySAX.py  atomClientAPI.py  atomClientAPITest.py  client_version_12.tar  config.xml  readme.txt  wxAtomClient.py  wxAtomClientApp.py  wxAtomClientFrame.py
closet/: README  closet.py  closet.yaml  poster.py  putter.py  setup.py  tester.py
closet/closet/: closet.py  getter.py  manage.py  poster.py  putter.py
desktop/SocialtextDesktop/: Makefile  SocialtextDesktop.xml
desktop/airActivities/: PACKAGING.txt  TODO.txt  openssl.cnf  st-activity.html  st-activity.xml
desktop/airSignals/: st-signals.html  st-signals.xml
desktop/airUber/: PACKAGING.txt  input.html  signals.html  st-uber.html  st-uber.xml
desktop/flashSignals/: LICENSE
desktop/signals/: Makefile
rest/converters/: convert_mediawiki.pl  convert_twiki.pl  jot_convert_pages.pl  process_jotspot_attachments.pl
rest/haskell/Socialtext-Resting/: .installed-pkg-config  .setup-config  Makefile  README  Socialtext.cabal
rest/haskell/Socialtext-Resting/Socialtext/: Resting.hs
rest/haskell/Socialtext-Resting/Socialtext/Resting/: Control.hs  HTTP.hs  MimeTypes.hs  Page.hs  Settings.hs  Templates.hs  Types.hs  User.hs  Workspace.hs
rest/haskell/Socialtext-Resting/Socialtext/Resting/Config/: CommandLine.hs  File.hs  Types.hs
rest/python/: setup.py
soap/: Makefile
soap/cpp/: Makefile  TIPS  (+3 more)
(+369 files in other folders)
